bottomhalf/ingress/bottomhalf-ingress/bt-ingress-gateway.yml
# ingress direct access use this for subdomain also
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bottomhalf-gateway
  namespace: bt
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: public
  tls:
    - hosts:      
      -  www.bottomhalf.in
      # -  www.axilcorps.com
      # -  www.pinkproject.club
      # -  www.axiupdeveloper.com
      -  www.theiconicconnect.com
      secretName: bottomhalf-tls
  rules:           
  # - host: www.axilcorps.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: axilcorps-ui-service
  #           port:
  #             number: 6090
  #     - path: /api/
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: apigateway-axilcorps-service
  #           port:
  #             number: 6093  

  - host: www.bottomhalf.in
    http:
      paths:
      
      # - path: /dashboard/
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: kubernetes-dashboard
      #       port:
      #         number: 31925      
              
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bottomhalf-service
            port:
              number: 8000

      - path: /bt/s1/
        pathType: Prefix
        backend:
          service:
            name: resources-apigateway-service
            port:
              number: 8005

      - path: /bt/s2/
        pathType: Prefix
        backend:
          service:
            name: bt-server-keyvault-service
            port:
              number: 8002

      - path: /bt/s3
        pathType: Prefix
        backend:
          service:
            name: token-manager-service
            port:
              number: 8003 

      - path: /bt/s4/
        pathType: Prefix
        backend:
          service:
            name: emailservice-service
            port:
              number: 8004  

      - path: /bt/s5
        pathType: Prefix
        backend:
          service:
            name: promtor-service
            port:
              number: 8007              

      - path: /bts/resources/
        pathType: Prefix
        backend:
          service:
            name: resources-apigateway-service
            port:
              number: 8005

  # - host: www.pinkproject.club
  #   http:
  #     paths:   
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: pinkproject-service
  #           port:
  #             number: 8006  

  - host: www.theiconicconnect.com
    http:
      paths:   
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iconicclub-service
            port:
              number: 8008

  - host: www.bottomhalve.com
    http:
      paths:   
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bt-prometheus-stack-grafana
            port:
              number: 80
